--- a/index.html
+++ b/index.html
@@ -270,14 +270,9 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-lg" id="carouselPause">
-                            <span class="fa fa-pause"></span>
-                        </button>
-                        <button class="btn btn-success btn-lg" id="carouselPlay">
-                            <span class="fa fa-play"></span>
-                        </button>
-                    </div>
+                    <button class="btn btn-danger btn-lg" id="carouselButton">
+                        <span class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -465,13 +460,23 @@
     <script>
         $(document).ready(function () {
             $("#mycarousel").carousel({ interval: 2000 });
-            $("#carouselPause").click(function () {
-                $("#mycarousel").carousel('pause');
-            });
-            $("#carouselPlay").click(function () {
-                $("#mycarousel").carousel('cycle');
-            });
+            $("#carouselButton").click(function () {
+                if ($('#carouselButton').children('span').hasClass('fa-pause')) {
+                    $("#mycarousel").carousel('pause');
+                    $('#carouselButton').children('span').removeClass('fa-pause');
+                    $('#carouselButton').children('span').addClass('fa-play');
+                    $('#carouselButton').removeClass('btn-danger');
+                    $('#carouselButton').addClass('btn-success');
+                }
+                else if ($('#carouselButton').children('span').hasClass('fa-play')) {
+                    $("#mycarousel").carousel('cycle');
+                    $('#carouselButton').children('span').removeClass('fa-play');
+                    $('#carouselButton').children('span').addClass('fa-pause');
+                    $('#carouselButton').removeClass('btn-success');
+                    $('#carouselButton').addClass('btn-danger');
+                }
 
+            });
         });
     </script>
 </body>
