--- a/index.html
+++ b/index.html
@@ -456,45 +456,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $("#mycarousel").carousel({ interval: 2000 });
-            $("#carouselButton").click(function () {
-                if ($('#carouselButton').children('span').hasClass('fa-pause')) {
-                    $("#mycarousel").carousel('pause');
-                    $('#carouselButton').children('span').removeClass('fa-pause');
-                    $('#carouselButton').children('span').addClass('fa-play');
-                    $('#carouselButton').removeClass('btn-danger');
-                    $('#carouselButton').addClass('btn-success');
-                }
-                else if ($('#carouselButton').children('span').hasClass('fa-play')) {
-                    $("#mycarousel").carousel('cycle');
-                    $('#carouselButton').children('span').removeClass('fa-play');
-                    $('#carouselButton').children('span').addClass('fa-pause');
-                    $('#carouselButton').removeClass('btn-success');
-                    $('#carouselButton').addClass('btn-danger');
-                }
-
-            });
-
-            $("#loginButton").click(function () {
-                console.log("Show");
-                $('#loginModal').modal('show');
-            });
-            $(".close").click(function () {
-                console.log("Hide");
-                $('#loginModal').modal('hide');
-            });
-            $("#reserveTableButton").click(function () {
-                console.log("Show");
-                $('#reserveTableModal').modal('show');
-            });
-            $(".reserve-table-close").click(function () {
-                console.log("Hide");
-                $('#reserveTableModal').modal('hide');
-            });
-        });
-    </script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
